syntax = "proto3";              
//Fenni
option java_package = "emu.lunarcore.proto";

import "ClientDownloadData.proto";

message ClientDownloadDataScNotify {
	ClientDownloadData download_data = 13;
}
