syntax = "proto3";
//
option java_package = "emu.lunarcore.proto";

import "ClientUploadData.proto";

message PlayerHeartBeatCsReq {
	uint32 JBPEMOFNEDG = 7;
	ClientUploadData upload_data = 9;
	uint64 client_time_ms = 11;
}